Refactor turns